# ChickGoGo

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  main.cpp  package.bat  package.sh  package_macos.sh  structure.excalidraw
.github/workflows/: build.yml
assets/: Info.plist
include/: Entity.hpp  Game.hpp  PlatformUtils.hpp  ResourceManager.hpp  string.hpp
include/States/: GameState.hpp  MenuState.hpp  PauseState.hpp  State.hpp
src/: Game.cpp  PlatformUtils.cpp  ResourceManager.cpp  string.cpp
src/Entities/: Chick.cpp  Egg.cpp  Obstacle.cpp
src/States/: GameState.cpp  MenuState.cpp  PauseState.cpp
